# problem-recommender-system-using-kgat-in-codeforces

./: .gitignore  Makefile  README.md  pyproject.toml
dataset/: contest-divisions.json  contests.json  problem-indices.json  problem-ratings.json  problem-tags.json  relations.json  tag-groups.json  users-sm.json
src/: constants.py  type.py
src/analysis/: analyze_submission_history.py
src/dataset/: .env.sample  Makefile  create_problem_dataset.py  create_relation_dataset.py  create_submission_history_dataset.py  create_user_and_submission_dataset.py
src/model/KGAT/: Makefile  aggregator.py  data_loader.py  dataset.py  graph_drawer.py  kg_triplets_generator.py  kg_visualizer.py  main.py  model.py  multi_head_attention.py  preprocess.py  weights_visualizer.py
src/model/NFM/: Makefile  hidden_layer.py  main.py  model.py  preprocess.py
src/model/NFM/result/metrics/: training-metrics.txt  validation-metrics.txt
src/model/NFM/result/model/: nfm.pth
src/utils/: bar_graph_visualizer.py  data_loader.py  figure_drawer.py  json_loader.py  json_writer.py  kg_triplets_generator.py  metrics_calculator.py  popularity_visualizer.py  problem_with_count_visualizer.py  retry_settings.py  visualize_problem_with_recommended_cnt.py
